// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Indent>
  <withPropsOnChange(HorizontalGutter)
    id="talk-comments-replyList-log--comment-id"
    role="log"
  >
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
    />
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
    />
  </withPropsOnChange(HorizontalGutter)>
</Indent>
`;

exports[`when there is more disables load more button 1`] = `
<Indent>
  <withPropsOnChange(HorizontalGutter)
    id="talk-comments-replyList-log--comment-id"
    role="log"
  >
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
    />
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
    />
    <Localized
      id="comments-replyList-showAll"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={true}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</Indent>
`;

exports[`when there is more renders a load more button 1`] = `
<Indent>
  <withPropsOnChange(HorizontalGutter)
    id="talk-comments-replyList-log--comment-id"
    role="log"
  >
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-1",
        }
      }
      key="comment-1"
    />
    <Relay(CommentContainer)
      asset={
        Object {
          "id": "asset-id",
        }
      }
      comment={
        Object {
          "id": "comment-2",
        }
      }
      key="comment-2"
    />
    <Localized
      id="comments-replyList-showAll"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-replyList-log--comment-id"
        disabled={false}
        fullWidth={true}
        id="talk-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </withPropsOnChange(Button)>
    </Localized>
  </withPropsOnChange(HorizontalGutter)>
</Indent>
`;
